--- a/requirements.txt
+++ b/requirements.txt
@@ -19,5 +19,8 @@ Flask-Mail==0.9.1
 # Authentication
 Flask-Login==0.3.2
 
+werkzeug==0.16.1
+SQLAlchemy==1.3.8
 # Drivers
-psycopg2==2.6.1
+psycopg2==2.8.4
+psycopg2-binary==2.8.4
